c2rust-transpile/tests/snapshots/snapshots__transpile@generics.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/generics.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct s {
    pub x: ::core::ffi::c_int,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct t {
    pub y: ::core::ffi::c_int,
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn foo() {
    let mut x: ::core::ffi::c_int = 42 as ::core::ffi::c_int + 1 as ::core::ffi::c_int;
    let mut y: ::core::ffi::c_double = 42.0f64 + 1.0f64;
    let mut z: ::core::ffi::c_float = 42.0f32 + 1.0f32;
    let mut n: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    let mut m: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    n = m;
    let mut s: s = s { x: 0 };
    let mut p1: *mut s = &raw mut s;
    let mut p2: *const s = &raw mut s;
    let mut t1: *mut t = p1 as *mut t;
    let mut t2: *const t = p2 as *const t;
    let cx: ::core::ffi::c_int = n;
    let mut ut_y: ::core::ffi::c_int = cx;
}
