c2rust-transpile/tests/snapshots/snapshots__transpile@gotos.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/gotos.2021.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![deny(unsafe_op_in_unsafe_fn)]
#[no_mangle]
pub unsafe extern "C" fn sum(mut count: ::core::ffi::c_int) -> ::core::ffi::c_int {
    unsafe {
        let mut x: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
        while !(count <= 0 as ::core::ffi::c_int) {
            x += count;
            count -= 1;
        }
        return x;
    }
}
