c2rust-transpile/tests/snapshots/snapshots__transpile@gotos.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/gotos.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn sum(mut count: ::core::ffi::c_int) -> ::core::ffi::c_int {
    let mut x: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    while count > 0 as ::core::ffi::c_int {
        x += count;
        count -= 1;
    }
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn goto_error_simple(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    '_error: {
        if x != 0 {
            x += 1 as ::core::ffi::c_int;
            if x != 0 {
                x += 2 as ::core::ffi::c_int;
                break '_error;
            }
        } else {
            x += 3 as ::core::ffi::c_int;
            if x != 0 {
                x += 4 as ::core::ffi::c_int;
                break '_error;
            }
        }
        return x + 5 as ::core::ffi::c_int;
    }
    return x + 6 as ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn goto_error_minimal(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    '_error: {
        if x != 0 {
            if x != 0 {
                break '_error;
            }
        } else if x != 0 {
            break '_error;
        }
        return x + 1 as ::core::ffi::c_int;
    }
    return x + 2 as ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn multi_goto_error(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    '_also_bad: {
        '_bad: {
            if x != 0 {
                x += 1 as ::core::ffi::c_int;
                if x != 0 {
                    if x != 0 {
                        break '_bad;
                    }
                }
                x += 2 as ::core::ffi::c_int;
                if x != 0 {
                    break '_also_bad;
                }
            }
            if x != 0 {
                x += 3 as ::core::ffi::c_int;
                if x != 0 {
                    if x != 0 {
                        break '_bad;
                    }
                }
                x += 4 as ::core::ffi::c_int;
                if x != 0 {
                    break '_also_bad;
                }
            }
            return x;
        }
        return x + 10 as ::core::ffi::c_int;
    }
    return x + 20 as ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn multi_goto_error_common(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    '_common: {
        '_also_bad: {
            '_bad: {
                if x != 0 {
                    x += 1 as ::core::ffi::c_int;
                    if x != 0 {
                        if x != 0 {
                            break '_bad;
                        }
                    }
                    x += 2 as ::core::ffi::c_int;
                    if x != 0 {
                        break '_also_bad;
                    }
                }
                if x != 0 {
                    x += 3 as ::core::ffi::c_int;
                    if x != 0 {
                        if x != 0 {
                            break '_bad;
                        }
                    }
                    x += 4 as ::core::ffi::c_int;
                    if x != 0 {
                        break '_also_bad;
                    }
                }
                return x;
            }
            x += 5 as ::core::ffi::c_int;
            break '_common;
        }
        x += 6 as ::core::ffi::c_int;
    }
    return x + 10 as ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn nested_irreducible(
    mut x: ::core::ffi::c_int,
    mut start_with_error: ::core::ffi::c_int,
) -> ::core::ffi::c_int {
    enum C2Rust_Block {
        error,
        next,
    }
    let mut c2rust_current_block: C2Rust_Block;
    '_exit: {
        if x < 0 as ::core::ffi::c_int {
            if start_with_error != 0 {
                break '_exit;
            }
        }
        if start_with_error != 0 {
            c2rust_current_block = C2Rust_Block::error;
        } else {
            c2rust_current_block = C2Rust_Block::next;
        }
        loop {
            match c2rust_current_block {
                C2Rust_Block::next => {
                    if x == 1 as ::core::ffi::c_int {
                        c2rust_current_block = C2Rust_Block::error;
                        continue;
                    }
                    x -= 1 as ::core::ffi::c_int;
                    c2rust_current_block = C2Rust_Block::error;
                }
                C2Rust_Block::error => {
                    if x > 0 as ::core::ffi::c_int {
                        c2rust_current_block = C2Rust_Block::next;
                    } else {
                        break '_exit;
                    }
                }
            }
        }
    }
    return x;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn double_irreducible(mut x: ::core::ffi::c_int) -> ::core::ffi::c_int {
    enum C2Rust_Block {
        l1,
        l2,
        a,
        b,
    }
    let mut c2rust_current_block: C2Rust_Block;
    if x % 2 as ::core::ffi::c_int == 0 as ::core::ffi::c_int {
        c2rust_current_block = C2Rust_Block::l1;
    } else {
        c2rust_current_block = C2Rust_Block::l2;
    }
    loop {
        match c2rust_current_block {
            C2Rust_Block::l2 => {
                x += 1 as ::core::ffi::c_int;
                if x < 10 as ::core::ffi::c_int {
                    c2rust_current_block = C2Rust_Block::l1;
                } else {
                    break;
                }
            }
            C2Rust_Block::l1 => {
                x += 1 as ::core::ffi::c_int;
                c2rust_current_block = C2Rust_Block::l2;
            }
            _ => unreachable!(),
        }
    }
    if x % 2 as ::core::ffi::c_int == 0 as ::core::ffi::c_int {
        c2rust_current_block = C2Rust_Block::a;
    } else {
        c2rust_current_block = C2Rust_Block::b;
    }
    loop {
        match c2rust_current_block {
            C2Rust_Block::b => {
                x += 1 as ::core::ffi::c_int;
                if x < 10 as ::core::ffi::c_int {
                    c2rust_current_block = C2Rust_Block::a;
                } else {
                    break;
                }
            }
            C2Rust_Block::a => {
                x += 1 as ::core::ffi::c_int;
                c2rust_current_block = C2Rust_Block::b;
            }
            _ => unreachable!(),
        }
    }
    return x;
}
