c2rust-transpile/tests/snapshots/snapshots__transpile@incomplete_arrays.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
assertion_line: 80
expression: cat tests/snapshots/incomplete_arrays.rs
input_file: c2rust-transpile/tests/snapshots/incomplete_arrays.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
